# Jepret

./: .dockerignore  .env.example  .gitignore  .prettierignore  AGENTS.md  Makefile  README.md  docker-compose.debug.yml  docker-compose.yml  package-lock.json  package.json
.github/workflows/: ci.yml
apps/api/: Dockerfile  pyproject.toml
apps/api/app/: main.py
apps/api/app/api/: admin.py  auth.py  creators.py  deps.py  profiles.py  schemas.py  system.py
apps/api/app/core/: config.py  errors.py  logging.py  middleware.py  security.py
apps/api/app/db/: models.py  session.py
apps/api/app/services/: auth.py  creators.py  profiles.py
apps/api/migrations/: env.py
apps/api/migrations/versions/: 20260713_0001_baseline.py  20260717_0002_auth_profiles.py  20260721_0003_creator_listing_index.py
apps/api/scripts/: export_openapi.py  seed_demo.py
apps/api/tests/: conftest.py  test_admin_api.py  test_auth_api.py  test_config.py  test_creators_api.py  test_creators_service.py  test_profiles_api.py  test_readiness.py  test_security.py  test_system_api.py  test_websocket_probe.py
apps/api/tests/integration/: test_auth_schema.py  test_database.py
apps/web/: Dockerfile  next.config.ts  package.json  playwright.config.ts  vitest.config.ts
apps/web/e2e/: auth.spec.ts  foundation.spec.ts  marketplace.spec.ts
apps/web/src/lib/: api.ts  (+7 more)
docs/: architecture.md  assumptions.md  deployment.md  implementation-plan.md  testing.md
docs/superpowers/plans/: 2026-07-13-jepret-foundation.md  2026-07-17-jepret-auth-profiles.md  (+1 more)
infra/gateway/: Caddyfile
scripts/: verify.mjs
(+26 files in other folders)
